[gd_scene load_steps=5 format=3 uid="uid://ore5wnc3tdpq"]

[ext_resource type="Script" path="res://addons/inventory_editor/scenes/inventories/InventoryInventoriesEditorView.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://door23ws6puav" path="res://addons/inventory_editor/scenes/inventories/InventoryInventories.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b5ko610clbu87" path="res://addons/inventory_editor/scenes/inventories/InventoryInventoryPreview.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://l03mugb48y86" path="res://addons/inventory_editor/scenes/inventories/InventoryInventoryData.tscn" id="4"]

[node name="InventoryInventoriesEditorView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Split" type="HSplitContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -361

[node name="Inventories" parent="Split" instance=ExtResource("2")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 209.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxData" type="VBoxContainer" parent="Split"]
offset_left = 221.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryData" parent="Split/VBoxData" instance=ExtResource("4")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 931.0
offset_bottom = 101.0

[node name="HSeparator" type="HSeparator" parent="Split/VBoxData"]
offset_top = 105.0
offset_right = 931.0
offset_bottom = 109.0

[node name="PreviewData" parent="Split/VBoxData" instance=ExtResource("3")]
anchor_right = 0.0
offset_top = 113.0
offset_right = 931.0
offset_bottom = 648.0
